auto-test/tests/chapter_17/invalid_types/void/subscript_void.c


int main(void) {
  char arr[3];
  return arr[(void)1];
}